<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/page_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 产品名称 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- 标签 -->
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/label_name"
                    android:textAppearance="?android:textAppearanceSmall" />

                <!-- 名称 -->
                <TextView
                    android:id="@+id/text_name"
                    style="@style/EditorFieldStyle" />

            </LinearLayout>

            <!-- 产品数量 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/layout_top">

                <!-- 标签 -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/label_quantity" />

                <!-- 数量 -->
                <TextView
                    android:id="@+id/text_quantity"
                    style="@style/EditorFieldStyle" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/price_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="right">

            <ImageView
                android:id="@+id/show_image"
                android:layout_width="@dimen/profile_image"
                android:layout_height="@dimen/profile_image" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="@dimen/layout_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_unit_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_increase_unit"
                    android:layout_width="@dimen/unit_button_size"
                    android:layout_height="@dimen/unit_button_size"
                    android:text="@string/increase_sell_unit" />

                <TextView
                    android:id="@+id/sell_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_decrease_unit"
                    android:layout_width="@dimen/unit_button_size"
                    android:layout_height="@dimen/unit_button_size"
                    android:text="@string/decrease_sell_unit" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/label_sales" />

            <TextView
                android:id="@+id/text_sales"
                style="@style/EditorFieldStyle"
                android:textSize="@dimen/sales_text_size" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/layout_top">

        <Button
            android:id="@+id/button_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/button_margin"
            android:padding="@dimen/button_padding"
            android:text="@string/increment"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_decrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="@dimen/button_padding"
            android:text="@string/decrement"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/button_send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_email"
        android:textColor="@android:color/white" />

</LinearLayout>
